# mah-velovox

./: .gitignore  CLAUDE.md  Makefile  Package.swift  README.md  README.yaml  SETTINGS_GUI_PLAN.md  build.sh  config.example.json  config.example.yaml  install.sh  pyproject.toml  sw_stats.py
Tests/VeloVoxCoreTests/: CleanTests.swift  ConfigTests.swift  PipelineTests.swift  ScriptTests.swift  (+1 more)
VeloVox/: Capture.swift  Config.swift  ReadAloud.swift  Settings.swift  SpeakWrite.swift  Speaker.swift  Transport.swift  main.swift
Velovox/: Config.swift  HotKeys.swift  RawVoice.swift  ReadAloud.swift  Script.swift  SpeakWrite.swift  Speaker.swift  main.swift
hammerspoon/: readaloud.lua  speakwrite.lua
mac/: RawVoice.swift  build.sh  main.swift  tts_probe.swift
plan-docs/: RawVoice-Handoff.md  anchor-dictation.md  best-recording.md  f5-vs-opus.md  mute-rules.md  readaloud-swift-port.md  speakwritev1.md
readaloud/: __init__.py  __main__.py  clean.py  config.py  daemon.py  parse.py  script.py
speakwrite/: __init__.py  __main__.py  config.py  daemon.py  polish.py  protocol.py
tests/: conftest.py  test_clean.py  test_cli.py  test_client.py  test_config.py  test_daemon.py  test_kokoro_engine.py  test_mute.py  test_parse_script.py  test_say_engine.py  test_sw_cli.py  test_sw_client.py  test_sw_config.py  test_sw_daemon.py  test_sw_mic_guard.py  test_sw_mock_engine.py  test_sw_parakeet_engine.py  test_sw_polish.py  test_sw_protocol.py
tts-poc/: .gitignore  f5_bench.py  f5_premium_bench.py  f5_us_bench.py  kokoro_bench.py  kokoro_bf_bench.py  test_text.txt  xtts_bench.py
(+17 files in other folders)
