[project]
name = "readaloud"
version = "0.1.0"
description = "Hotkey-triggered, markdown-aware text-to-speech reader for macOS"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyyaml",
    "kokoro-onnx",
    "sounddevice",
    "soundfile",
    "numpy",
    "typer>=0.26.7",
]

[project.scripts]
readaloud = "readaloud.__main__:main"

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["readaloud"]
